--- a/profile/indexp.html
+++ b/profile/indexp.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,12 +10,10 @@
 </head>
 <body>
   <div class="container">
-    <!-- LEFT COLUMN -->
     <div class="avatar">
-      <img src="https://sf-static.upanhlaylink.com/view/image_202510046ed57e3bda22038c8e3525065d3bc4ae.jpg" alt="KC.png" />
+      <img src="https://sf-static.upanhlaylink.com/img/image_202510046ed57e3bda22038c8e3525065d3bc4ae.jpg" alt="Ảnh đại diện của NGUYEN KHANG" />
     </div>
 
-    <!-- RIGHT COLUMN -->
     <div class="name">
       <h1>Hoàng Lê Nguyên Khang</h1>
       <div class="specialize">Designer</div>
