--- a/profile/indexp.html
+++ b/profile/indexp.html
@@ -1,29 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LUONG KIM CHI - CV</title>
+  <title>NGUYEN KHANG - CV</title>
   <link rel="stylesheet" href="stylep.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 </head>
 <body>
   <div class="container">
-    <!-- LEFT COLUMN -->
     <div class="avatar">
-      <img src="https://sf-static.upanhlaylink.com/img/image_202509301f27ce0027e3511bebacf446b92380f6.jpg" alt="KC.png" />
+      <img src="https://sf-static.upanhlaylink.com/img/image_202510046ed57e3bda22038c8e3525065d3bc4ae.jpg" alt="Ảnh đại diện của NGUYEN KHANG" />
     </div>
 
-    <!-- RIGHT COLUMN -->
     <div class="name">
-      <h1>LƯƠNG KIM CHI</h1>
+      <h1>Hoàng Lê Nguyên Khang</h1>
       <div class="specialize">Designer</div>
       <ul class="contact">
-        <li><span>P</span> +84 901094727</li>
-        <li><span>E</span> luongkimchi3101@gmail.com</li>
-        <li><span>W</span> www.kimchi.dev</li>
+        <li><span>P</span> +84 949973138</li>
+        <li><span>E</span> barchenkhang@gmail.com</li>
+        <li><span>W</span> www.nguyenkhang.dev</li>
       </ul>
     </div>
 
@@ -77,7 +74,7 @@
       <div class="item">
         <h4>Portfolio Website</h4>
         <div class="time">2023</div>
-        <div class="web">www.kimchi.dev</div>
+        <div class="web">www.nguyenkhang.dev</div>
         <div class="location">Designer & Developer</div>
         <div class="des">
           Personal portfolio showcasing design works and coding projects.
@@ -92,7 +89,7 @@
       <div class="item">
         <h4>Brand Identity for Local Café</h4>
         <div class="time">2024</div>
-        <div class="web">Behance.net/kimchi-cafe</div>
+        <div class="web">Behance.net/barchen/hihi</div>
         <div class="location">Graphic Designer</div>
         <div class="des">
           Designed logo, menu, and social media templates for a startup café.
@@ -107,7 +104,7 @@
       <div class="item">
         <h4>UI Design for Mobile App</h4>
         <div class="time">2025</div>
-        <div class="web">Dribbble.com/kimchi-ui</div>
+        <div class="web">Dribbble.com/nguyenkhang-ui</div>
         <div class="location">UI Designer</div>
         <div class="des">
           Designed user interface for a task management app.
